# halt

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Evenomics.html  FEATURES.md  HALT.command  LICENSE  README.md  RUST_MIGRATION.md  SECURITY.md  build_ios.command  dbg_ann.ts  dbg_em.ts  diff.txt  job_log_failed.txt  job_log_failed2.txt  job_log_failed3.txt  network_backup.ts  refresh.bat  run_log.txt  start.bat  start.py  start_dev.bat  start_on_Windows.bat  start_rust.bat  start_rust.command  wg_log.txt  zh_test.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-macos.yml  ci.yml  release-desktop.yml  release-ios.yml  release.yml  test-ios-cert.yml
api/: config.py  main.py
api/routes/: call_translate.py  distribution.py  health.py  inference.py  inventory.py  mesh.py  patients.py  roster.py  stt.py  tasks.py  translate.py  translate_stream.py  tts.py
dev/: MAC_BUILD.md  README.md  brain_scan.py  build_and_deploy.py  build_macos.sh  clean_r2.py  e2e_backend.py  list_r2.py  merge_store_listing.py  pack_models.py  panic_dump.txt  pipe_debug.txt  pull_and_inspect.py  repro_crash.py  setup.py  stack_map.md  sync_locales.py  sync_store_listing.py  test_ml_endpoints.py  test_packaging.py  test_r2_download.py  upload_r2.py  white_glove.py  white_glove_python.txt
dev/certs/: PO Box.docx
dev/electron-launcher/: Info.plist.additions  PrivacyInfo.xcprivacy  README.md  entitlements.mac.plist  main.js  package-lock.json  package.json
dev/electron-launcher/assets/: README.md
dev/electron-launcher/renderer/: splash.html
dev/ios-companion/: Info.plist.additions  capacitor.config.ts  package.json
dev/ios-companion/ios-plugins/: HealthKitBridge.swift  PluginRegistration.swift
dev/macos/: build-production.sh  install-native.sh  install.sh  validate-package.sh
dev/pi5-kiosk-forge/: forge.sh
dev/ssl/: ca_b64.txt  cert.pem  gen_profile.py  halt-secure.mobileconfig  key.pem  rootCA-key.pem  rootCA.pem
dev/windows/: Build-Production.ps1  Validate-WindowsPackage.ps1
electron/: main.js
patient_data/: _activity.json  _chat.json  _roster.json  _wards.json
releases source code/release one/halt-1.0.1-alpha/: .gitattributes  CHANGELOG.md  LICENSE  README.md  start_on_Mac.sh
scripts/: sync_locales.py
tests_sandbox/: current_bug.md  end_to_end_test.ps1  gen.py  mapper.py  mapping_test.txt  phonem.md  ru_test.txt  sweep.js  test_all.js  test_all.py  th_test.txt
triage/_source/: build_assessments_procedures_protocols.ps1  build_conditions.ps1  build_pharmacology.ps1
triage/assessments/avpu/: am.json  de.json  en.json  es.json  fr.json  ha.json  it.json  ja.json  jw.json  ko.json  ku.json  mg.json  mr.json  my.json  ps.json  ru.json  ta.json  th.json  tl.json  tr.json  ur.json  vi.json  yo.json  zh.json
triage/assessments/dehydration-assessment/: am.json  bn.json  de.json  en.json  fa.json  id.json  ig.json  ja.json  ko.json  mg.json  my.json  pl.json  ps.json  ru.json  sw.json  te.json  tl.json  tr.json  uk.json  ur.json  vi.json  xh.json  yo.json  zh.json
triage/assessments/gcs/: ar.json  bn.json  de.json  es.json  fa.json  fr.json  ha.json  he.json  ig.json  it.json  ku.json  mg.json  mr.json  my.json  nl.json  pl.json  ps.json  ru.json  so.json  ta.json  te.json  tl.json  tr.json  vi.json  zh.json
triage/assessments/hemorrhage-class/: am.json  bn.json  en.json  fr.json  he.json  id.json  ig.json  jw.json  ko.json  la.json  mg.json  mr.json  nl.json  pl.json  ps.json  pt.json  sw.json  th.json  tr.json  vi.json  zu.json
triage/assessments/salt-triage/: ar.json  de.json  ha.json  hi.json  ja.json  km.json  ku.json  mg.json  nl.json  ps.json  so.json  sw.json  te.json  tl.json  tr.json  uk.json  xh.json  zu.json
triage/assessments/shock-index/: am.json  bn.json  en.json  fa.json  ha.json  he.json  id.json  it.json  ja.json  km.json  ko.json  la.json  mg.json  mr.json  pl.json  pt.json  so.json  ta.json  th.json  tl.json  tr.json  zh.json
triage/conditions/s0000xa/: am.json  ar.json  bn.json  de.json  en.json  es.json  fa.json  fr.json  ha.json  he.json  hi.json  id.json  ig.json  it.json  ja.json  jw.json  km.json  ko.json  ku.json  la.json  mg.json  mr.json  my.json  nl.json  pl.json  ps.json  pt.json  ru.json  so.json  sw.json  ta.json  te.json  th.json  tl.json  tr.json  uk.json  ur.json  vi.json  xh.json  yo.json  (+2 more)
triage/conditions/s0000xd/: am.json  ar.json  bn.json  de.json  en.json  es.json  fa.json  fr.json  ha.json  he.json  hi.json  id.json  ig.json  it.json  ja.json  jw.json  km.json  ko.json  ku.json  la.json  mg.json  mr.json  my.json  nl.json  pl.json  ps.json  pt.json  ru.json  so.json  sw.json  ta.json  te.json  th.json  tl.json  tr.json  uk.json  ur.json  vi.json  xh.json  yo.json  (+2 more)
triage/conditions/s0000xs/: am.json  ar.json  bn.json  de.json  en.json  es.json  fa.json  fr.json  ha.json  he.json  hi.json  id.json  ig.json  it.json  ja.json  jw.json  km.json  ko.json  ku.json  la.json  mg.json  mr.json  my.json  nl.json  pl.json  ps.json  pt.json  ru.json  so.json  sw.json  ta.json  te.json  (+10 more)
viewer/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  verify_parity.ts  vite.config.ts
viewer/public/: manifest.json  sw.js
viewer/scripts/: react-check.mjs
viewer/src/: App.tsx  index.css  main.tsx  types.ts
viewer/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  test_announcement.ps1  trace_announcement.ps1
viewer/src-tauri/icons/: icon.icns
viewer/src-tauri/msix/: AppxManifest.xml
viewer/src-tauri/src/: config.rs  http_server.rs  lib.rs  main.rs  storage.rs
viewer/src-tauri/src/commands/: diagnostics.rs  distribution.rs  export.rs  health.rs  inference.rs  inventory.rs  mod.rs  patients.rs  qr.rs  roster.rs  setup.rs  stt.rs  tasks.rs  translate.rs  tts.rs  wards.rs
viewer/src-tauri/src/mesh/: alerts.rs  chat.rs  mod.rs  server.rs  translate_stream.rs  video.rs  ws_listener.rs
viewer/src-tauri/src/models/: kokoro.rs  llava.rs  llm.rs  mod.rs  nllb.rs  phoneme_compiler.rs  phonemizer.rs  whisper.rs
(+64506 files in other folders)
