[package]
name = "halt-triage"
version = "1.1.0"
description = "HALT — Hermetic Anonymous Local Triage. Offline-first field medical triage system."
default-run = "halt-triage"
authors = ["Hermetic Labs <Frontdesk@7hermeticlabs.com>"]
license = "MIT"
repository = "https://github.com/Hermetic-Labs/halt"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"

aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
sentencepiece = { version = "0.13.1", optional = true }
ct2rs = { version = "0.9.18", optional = true }
llama-cpp-2 = { version = "0.1.143", optional = true, features = ["mtmd"] }
whisper-rs = { version = "0.16.0", optional = true }
ort = { version = "2.0.0-rc.9", optional = true }
encoding_rs = "0.8.35"
ndarray = "0.17.2"
qrcode = "0.14"
zip = { version = "2", default-features = false, features = ["deflate"] }
rcgen = "0.13"
rayon = { version = "1.10", optional = true }
symphonia = { version = "0.5", optional = true, features = ["isomp4", "mp3", "ogg", "wav", "aac", "mkv"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time"] }
tokio-tungstenite = "0.24"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
once_cell = "1.21.4"
unicode-normalization = "0.1.25"
any_ascii = "0.3.3"

[features]
default = ["native_ml"]
native_ml = [
    "dep:llama-cpp-2",
    "dep:ort",
    "dep:flate2",
    "dep:tar",
    "dep:rayon",
    "dep:symphonia"
]
# Standalone whisper binary — separate process to avoid ggml symbol clash
whisper_stt = [
    "dep:whisper-rs",
    "dep:symphonia"
]
# Standalone NLLB binary — separate process to avoid CTranslate2 CRT crashes
nllb_translate = [
    "dep:sentencepiece",
    "dep:ct2rs"
]

[dependencies.reqwest]
version = "0.12"
features = ["stream", "rustls-tls", "blocking", "json"]
default-features = false

[dependencies.flate2]
version = "1"
optional = true

[dependencies.tar]
version = "0.4"
optional = true

[dependencies.futures-util]
version = "0.3"

[[bin]]
name = "halt_whisper"
path = "src/bin/halt_whisper.rs"
required-features = ["whisper_stt"]

[[bin]]
name = "halt_nllb"
path = "src/bin/halt_nllb.rs"
required-features = ["nllb_translate"]

[[bin]]
name = "halt_vision"
path = "src/bin/halt_vision.rs"
required-features = ["native_ml"]

[patch.crates-io]
ct2rs = { path = "vendor/ct2rs" }
esaxx-rs = { path = "vendor/esaxx-rs" }
llama-cpp-sys-2 = { path = "vendor/llama-cpp-sys-2" }

# Build C/C++ dependencies in release mode even during debug builds.
# Prevents debug CRT /GS security cookie crashes from ggml symbol conflicts.
[profile.dev.build-override]
opt-level = 2

[profile.dev.package."llama-cpp-sys-2"]
opt-level = 2

[profile.dev.package."ct2rs"]
opt-level = 2

[profile.dev.package."sentencepiece-sys"]
opt-level = 2

[profile.dev.package."ort-sys"]
opt-level = 2
